--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "devDependencies": {
     "node-sass": "^4.10.0",
-    "react-native-vector-icons@": "^4.2.0",
-    "react-materialize": "^2.5.0"
+    "react-materialize": "^2.5.0",
+    "react-native-vector-icons": "^4.2.0",
+    "react-router-dom": "^4.3.1"
   }
 }
